# er-hwinfo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  deps.json
.github/workflows/: release.yml
cmake/: er-hwinfoConfig.cmake.in
include/er/: hwinfo.hpp
resources/: hwdb-schema.json  hwdb.json
src/: main.cpp
test/: CMakeLists.txt  test.cpp
